Update 고정 소수점 & 부동 소수점.md

--- a/Computer Architecture/고정 소수점 & 부동 소수점.md
+++ b/Computer Architecture/고정 소수점 & 부동 소수점.md
@@ -4,11 +4,14 @@
 
 실수를 표현하는 방법으로 **고정 소수점**과 **부동 소수점** 두가지 방식이 존재한다.
 
+<br />
+
 ## 고정 소수점 방식 (Fixed Point)
 
 ![point](https://user-images.githubusercontent.com/38287375/165951234-e6fe4a4c-d5a5-41ab-a9b2-311c05b82c65.png)
 
-실수는 보통 정수부와 소수부로 나눌 수 있다. 따라서 실수를 표현하는 가장 간단한 방식은 **소수부의 자릿수를 미리 정하여, 고정된 자릿수의 소수를 표현**하는 것이다.
+실수는 보통 정수부와 소수부로 나눌 수 있다. 따라서 실수를 표현하는 가장 간단한 방식은  
+**소수부의 자릿수를 미리 정하여, 고정된 자릿수의 소수를 표현**하는 것이다.
 
 - **표현법**
 ```
@@ -23,6 +26,8 @@ ex) 10.375
 ```
 - **장점** : 실수를 정수부와 소수부로 표현하여 단순하다.
 - **단점** :  표현의 범위가 너무 적어서 활용하기 힘들다. 
+
+<br />
 
 ## 부동 소수점 (Floating Point)
 
