--- a/Operating System/프로세스 & 스레드.md
+++ b/Operating System/프로세스 & 스레드.md
@@ -1,6 +1,6 @@
 # 프로세스 & 스레드
 
-**프로그램 -> 프로세스 -> 스레드**
+> **프로그램 -> 프로세스 -> 스레드**
 
 **프로그램이란?**
  **파일이 저장 장치에 저장되어 있지만 메모리에는 올라가 있지 않은 정적인 상태**를 말한다.
@@ -15,6 +15,7 @@
 - **프로세스** : 운영체제로부터 자원을 할당받은 **작업**의 단위
 - **스레드** : 프로세스가 할당받은 자원을 이용하는 **실행 흐름**의 단위
 
+<br />
 
 ## 프로세스와 스레드의 작동 방식
 
@@ -37,6 +38,8 @@
 
 **프로세스는 자신만의 고유 공간과 자원을 할당 받아 사용**하는데 반해, **스레드는 다른 스레드와 공간, 자원을 공유하면서 사용**하는 차이가 있다.
 
+<br />
+
 ## 멀티태스킹 & 멀티스레드
 
 - **멀티태스킹** : 하나의 운영체제 안에서 여러 프로세스가 실행되는 것
@@ -51,6 +54,8 @@
 1.  스레드 하나가 프로세스 내 자원을 망쳐버린다면 모든 프로세스가 종료될 수 있다.
 2.  자원을 공유하기 때문에 필연적으로  **동기화 문제**가 발생할 수밖에 없다.
 
+<br />
+
 ## 결론
 
 프로세스와 스레드는 개념의 범위부터 다르다. 스레드는 프로세스 안에 포함되어 있기 때문이다.
@@ -58,6 +63,8 @@
 운영체제가 프로세스에게 Code/Data/Stack/Heap 메모리 영역을 할당해 주고 최소 작업 단위로 삼는 반면, 스레드는 프로세스 내에서 Stack 메모리 영역을 제외한 다른 메모리 영역을 같은 프로세스 내 다른 스레드와 공유한다.
 
 프로세스는 다른 프로세스와 정보를 공유하려면 IPC를 사용하는 등의 번거로운 과정을 거쳐야 하지만, 스레드는 기본 구조 자체가 메모리를 공유하는 구조이기 때문에 다른 스레드와 정보 공유가 쉽다. 때문에 멀티태스킹보다 멀티스레드가 자원을 아낄 수 있게 된다. 다만 스레드의 스케줄링은 운영체제가 처리하지 않기 때문에 프로그래머가 직접 동기화 문제에 대응할 수 있어야 한다.
+
+<br />
 
 ---
 참조
