Update 페이징 & 세그멘테이션.md

--- a/Operating System/페이징 & 세그멘테이션.md
+++ b/Operating System/페이징 & 세그멘테이션.md
@@ -1,6 +1,8 @@
 # 페이징 & 세그멘테이션
 
-> 페이징과 세그멘테이션은 가상 메모리를 관리하는 기법으로 프로세스가 사용하는 메모리 공간을 잘게 나누어 비연속적으로 실제 메모리에 할당하는 메모리 관리 기법이다.
+페이징과 세그멘테이션은 가상 메모리를 관리하는 기법으로 프로세스가 사용하는 메모리 공간을 잘게 나누어 비연속적으로 실제 메모리에 할당하는 메모리 관리 기법이다.
+
+<br />
 
 ## 메모리 관리 기법
 
@@ -18,6 +20,8 @@
 -   **페이지** : 프로세스를 고정된 크기의 작은 블록들로 나눴을 때, 그 블록
 -   **프레임** : 페이지 크기와 같은 주 기억장치 메모리 블록
 -   **세그먼트** : 서로 다른 크기의 논리적 단위
+
+<br />
 
 ## 메모리 단편화
 
@@ -37,7 +41,7 @@
 -   총 메모리 공간을 충분하지만 실제로는 할당할 수 없는 상황 발생
 -   **-> 외부 단편화**
 
-
+<br />
 
 ## 페이징(Paging)
 
@@ -48,6 +52,8 @@
 -   CPU는 논리 주소로 프로그램이 설정한대로 연속적인 주소값으로 명령을 내리고 이는 메모리로 가기전에 각 페이지의 실제 메모리 주소가 저장되어 있는 테이블에서 물리 주소로 변경
 -   만약 프로세스가 프레임의 정수배보다 살짝 작다면 할당된 마지막 프레임은 전부 사용되지 않고 남아버리는 내부 단편화가 발생 (페이지가 클수록 내부 단편화 커짐)
 -   가상 메모리 사용
+
+<br />
 
 ## 세그멘테이션(Segmentation)
 
@@ -60,6 +66,8 @@
 -   가상 메모리 사용
 -   CPU에서 해당 세그먼트의 크기를 넘어서는 주소가 들어오면 인터럽트가 발생해서 해당 프로세스를 강제로 종료
 
+<br />
+
 ## 페이징과 세그멘테이션의 차이
 
 -   페이징은 고정 크기를 가짐
@@ -67,10 +75,14 @@
 -   페이징은 내부 단편화 발생 가능
 -   세그멘테이션은 외부 단편화 발생 가능
 
+<br />
+
 ## 페이징과 세그멘테이션을 사용하는 이유
 
 -   Memory Fragmentation 해결하기 위한 방법
 -   다중 프로그래밍 시스템에서 여러 프로세스를 수용하기 위해 주기억장치를 동적 분할하는 메모리 관리 기법이 필요함
+
+<br />
 
 ---
 참조
